--- a/web/partials/music.html
+++ b/web/partials/music.html
@@ -1,11 +1,21 @@
-<div class="music clearfix" ng-repeat="music in songs">
-    <div class="img" ng-click="play(music);"><img ng-src="{{music.linkImage}}" height="152" width="152" alt=""></div>
-    <div class="right">
-        <div class="h3">
-            <a href="#/song/{{music.id}}"> <span>{{music.artist}}</span> - {{music.name}}</a>
+<h1 class="h1">Play and buy good music</h1>
+<ul class="sort">sort by
+    <li>Price</li>
+    <li>Rating</li>
+</ul>
+
+<div id="content-music">
+    <div class="music clearfix" ng-repeat="music in songs">
+        <div class="img" ng-click="play(music);"><img ng-src="{{music.linkImage}}" height="152" width="152" alt=""></div>
+        <div class="right">
+            <div class="h3">
+                <a href="#/song/{{music.id}}"> <span>{{music.artist}}</span> - {{music.name}}</a>
+            </div>
+            {{music.price}}$
+            <div class="button" ng-click="buy(music);">BUY</div>
+            <img class="freq" src="img/freq.png" height="45" width="317" alt="">
+            <div class="button">share</div>
+            <div class="button"><i class="heart"></i>like</div>
         </div>
-        <img class="freq" src="img/freq.png" height="45" width="317" alt="">
-        <div class="button">share</div>
-        <div class="button"><i class="heart"></i>like</div>
     </div>
 </div>
