--- a/web/partials/audio.upload.html
+++ b/web/partials/audio.upload.html
@@ -3,7 +3,20 @@ Upload audio file
     <input type="text" ng-model="sendAudio.nameAudio" placeholder="Audio name"><br>
     <input type="text" ng-model="sendAudio.artist" placeholder="Artist"><br>
     <input type="text" ng-model="sendAudio.album" placeholder="Album"><br>
-<form action="{{'/rest/file/uploadAudio?nameAudio=' + sendAudio.nameAudio + '&artist=' + sendAudio.artist + '&album=' + sendAudio.album}}" method="POST" enctype="multipart/form-data">
+<form id="audio-upload" action="{{'/rest/file/uploadAudio?nameAudio=' + sendAudio.nameAudio + '&artist=' + sendAudio.artist + '&album=' + sendAudio.album}}" method="POST" enctype="multipart/form-data">
     <input type="file" ng-model="sendAudio.audioFile" name="audioFile">
     <input type="submit"/>
 </form>
+
+<script>
+    $("#audio-upload").ajaxForm({
+        success: function(d) {
+           alert("Залили!");
+           console.log(d);
+        },
+        error: function(d) {
+            console.log(d);
+            alert("Ошибка! Печаль, беда");
+        }
+    });
+</script>
