--- a/web/partials/profile.edit.html
+++ b/web/partials/profile.edit.html
@@ -1,6 +1,19 @@
-<form action="/rest/useredit/edit" method="POST">
+<form id="user-edit-form" action="/rest/useredit/edit" method="POST">
    Name: <input type="text" name="name" value="{{user.name}}"><br>
    E-mail: <input type="email" name="email" value="{{user.email}}"><br>
    Information:<br> <textarea name="information" cols="30" rows="10">{{user.information}}</textarea><br>
     <input type="submit" value="Update information">
 </form>
+
+<script>
+    $("#user-edit-form").ajaxForm({
+        success: function(d) {
+            alert("Информация обновлена!");
+            console.log(d);
+        },
+        error: function(d) {
+            console.log(d);
+            alert("Ошибка! Печаль, беда");
+        }
+    });
+</script>
