--- a/web/css/all.css
+++ b/web/css/all.css
@@ -18,6 +18,29 @@ a {
 	text-decoration: none;
 }
 
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+table td  {
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+}
+
+table tr:hover {
+    background: #5ff;
+    cursor: pointer;
+}
+
+table tr:nth-child(even) {
+    background: #eee;
+}
+
+table tr:hover {
+    background: #eee;
+}
+
 .container {
 	width: 960px;
 	margin: 0 auto;
