Happy Night commit
*починили поиск
*починили кнопочки покупки и редактирование
*починили редактирование
*добавили лайки
*апгрейднули личный кабинет:
добавили аватарку
добавили список загруженных треков
*апргрейднули страничку аудио:
добавили кнопку редактирование и нормальное отображение
*добавили удаление аудиозаписей
*насколько смогли прикрутили админку
*сортировку по рейтингу (лайкам)
и еще много чего...

--- a/web/partials/audio.edit.html
+++ b/web/partials/audio.edit.html
@@ -18,8 +18,8 @@
         {{song.comment}}
     </textarea><br>
     <input type="submit"/>
-    
 </form>
+
 
 <script>
     $("#audio-edit").ajaxForm({
@@ -33,3 +33,5 @@
         }
     });
 </script>
+
+<div class="button" ng-click="audioDelete(song)">DELETE</div>
