--- a/web/partials/admin.users.html
+++ b/web/partials/admin.users.html
@@ -12,6 +12,9 @@
         <td>{{user.login}}</td>
         <td>{{user.name}}</td>
         <td>{{user.email}}</td>
-        <td ng-click="ban(user)"><div class="button">Kill</div></td>
+        <td>
+            <div ng-click="ban(user)" ng-hide="user.banned" class="button">Kill</div>
+            <div class="button" ng-show="user.banned" ng-click="unban(user)">Pardon</div>
+        </td>
     </tr>
 </table>
