--- a/web/partials/audio.upload.html
+++ b/web/partials/audio.upload.html
@@ -1,10 +1,10 @@
-Upload audio file
+<h1 class="h1">Upload audio file</h1><br>
 
     <input type="text" ng-model="sendAudio.nameAudio" placeholder="Audio name"><br>
     <input type="text" ng-model="sendAudio.artist" placeholder="Artist"><br>
     <input type="text" ng-model="sendAudio.album" placeholder="Album"><br>
 <form id="audio-upload" action="{{'/rest/file/uploadAudio?nameAudio=' + sendAudio.nameAudio + '&artist=' + sendAudio.artist + '&album=' + sendAudio.album}}" method="POST" enctype="multipart/form-data">
-    <input type="file" ng-model="sendAudio.audioFile" name="audioFile">
+    <input type="file" ng-model="sendAudio.audioFile" name="audioFile"><br>
     <input type="submit"/>
 </form>
 
