--- a/web/partials/music.html
+++ b/web/partials/music.html
@@ -1,7 +1,8 @@
 <h1 class="h1">Play and buy good music</h1>
 <ul class="sort">sort by
-    <li>Price</li>
-    <li>Rating</li>
+    <li><a href="/">DATE</a></li>
+    <!--<li>Price</li>-->
+    <li><a href="/#/audio/getbyrate">Rating</a></li>
 </ul>
 
 <div id="content-music">
@@ -11,12 +12,13 @@
             <div class="h3">
                 <a href="#/song/{{music.id}}"> <span>{{music.artist}}</span> - {{music.name}}</a>
             </div>
-            {{music.price}}$
+            <div><i class="heart"></i> {{music.countLike}} Likes</div>
+            <div>{{music.price}}$</div>
             <div class="button" ng-show="logined && (music.buy)" ng-click="buy(music);">BUY</div>
             <div class="button" ng-show="logined && music.edit" ng-click="edit(music)">Edit</div>
             <img class="freq" src="img/freq.png" height="45" width="317" alt="">
-            <div class="button">share</div>
-            <div class="button"><i class="heart"></i>like</div>
+            <!--<div class="button">share</div>-->
+            <div class="button" ng-hide="music.like" ng-click="like(music);"><i class="heart"></i>like</div>
         </div>
     </div>
 </div>
