--- a/web/css/all.css
+++ b/web/css/all.css
@@ -278,3 +278,25 @@ footer {
 .login-anchor {
     cursor: pointer;
 }
+
+#player {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    height: 100px;
+    width: 200px;
+    padding: 20px;
+    background: #fff;
+    opacity: 0.2;
+    transition: opacity 0.5s ease;
+    border: 1px solid #ccc;
+}
+
+#player:hover {
+    opacity: 0.8;
+}
+
+#player .album {
+    height: 50px;
+    width: 50px;
+}
