--- a/web/partials/song.html
+++ b/web/partials/song.html
@@ -1,7 +1,6 @@
 <div class="music clearfix" >
     <h2><span>{{song.artist}}</span> - {{song.name}}</h2>
-    <div class="img"><img ng-src="{{song.linkImage}}" height="152" width="152" alt=""></div>
-    <audio ng-src="{{song.linkFile}}"></audio>
+    <div class="img" ng-click="play(song)"><img ng-src="{{song.linkImage}}" height="152" width="152" alt=""></div>
     <div class="right">
         <ul>
             <!--<li ng-repeat="param in song">{{param}}</li>-->
@@ -15,6 +14,8 @@
         </ul>
         <div class="button" ng-show="logined && (song.buy)" ng-click="buy(song);">BUY</div>
         <div class="button" ng-show="logined && song.edit" ng-click="edit(song)">Edit</div>
+
+        <a href="{{song.linkFile}}" ng-show="logined && (!song.buy || song.edit)"><div class="button">DOWNLOAD</div></a>
 
 
     </div>
