--- a/web/partials/audio.upload.html
+++ b/web/partials/audio.upload.html
@@ -5,17 +5,34 @@
     <input type="text" ng-model="sendAudio.album" placeholder="Album"><br>
     Private <input type="checkbox" name="access" value="private" ng-model="sendAudio.access"><br>
 <form id="audio-upload" action="{{'/rest/file/uploadAudio?nameAudio=' + sendAudio.nameAudio + '&artist=' + sendAudio.artist + '&album=' + sendAudio.album + '&access=' + sendAudio.access }}" method="POST" enctype="multipart/form-data">
-    <input type="file" ng-model="sendAudio.audioFile" name="audioFile"><br>
+    <input accept="audio/*" type="file" ng-model="sendAudio.audioFile" name="audioFile"><br>
     <input type="submit"/>
 </form>
 
+<!--<script>-->
+    <!--$("#audio-upload").submit(function() {-->
+
+
+        <!--$(this).ajaxSubmit({-->
+            <!--success: function(d) {-->
+                <!--alert("Залили!");-->
+                <!--console.log(d);-->
+            <!--},-->
+            <!--error: function(d) {-->
+                <!--console.log(d);-->
+                <!--alert("Ошибка! Печаль, беда");-->
+            <!--}-->
+        <!--});-->
+    <!--});-->
+<!--</script>-->
+
 <script>
     $("#audio-upload").ajaxForm({
-        success: function(d) {
-           alert("Залили!");
-           console.log(d);
+        success: function (d) {
+            alert("Залили!");
+            console.log(d);
         },
-        error: function(d) {
+        error: function (d) {
             console.log(d);
             alert("Ошибка! Печаль, беда");
         }
