--- a/web/partials/profile.html
+++ b/web/partials/profile.html
@@ -9,6 +9,7 @@
     <li>Status: {{user.access | userAccessFilter}}</li>
 </ul><br>
 <div class="button" ng-show="(user.id == myInfo.id) || (myInfo.access == 2)" ng-click="edit(user)">Edit user</div><br>
+<a ng-show="(myInfo.access == 2)" href="/#/admin/users" class="button">Admin panel</a>
 <br>
 
 <table>
