--- a/web/partials/pwd.html
+++ b/web/partials/pwd.html
@@ -1,5 +1,6 @@
+<h1 class="h1">Restore password</h1>
 <form ng-show="showPWD" action="{{'/rest/password/change?uniq=' + uniq}}" method="POST">
 	<input placeholder="Input new password" type="password" name="passOne">
-	<input placeholder="Input new password" type="password" name="Two">
+	<input placeholder="Input new password" type="password" name="passTwo">
 	<input type="submit">
 </form>
