--- a/web/partials/audio.edit.html
+++ b/web/partials/audio.edit.html
@@ -35,3 +35,26 @@
 </script>
 
 <div class="button" ng-click="audioDelete(song)">DELETE</div>
+
+<br>
+
+<form id="upload-image-audio" action="{{'/rest/file/uploadImage?idA=' + song.id}}" method="POST">
+    <h2 class="h2">Change audio image</h2>
+    <img width="50" height="50" ng-src="{{song.linkImage}}" alt=""/><br>
+    <input type="file" name="image"><br>
+    <input type="submit"/>
+</form>
+
+
+<script>
+    $("#upload-image-audio").ajaxForm({
+        success: function(d) {
+            alert("Информация обновлена!");
+            console.log(d);
+        },
+        error: function(d) {
+            console.log(d);
+            alert("Ошибка! Печаль, беда");
+        }
+    });
+</script>
