--- a/web/partials/reg.html
+++ b/web/partials/reg.html
@@ -1,10 +1,13 @@
-Registration
+<h1 class="h1">Registration</h1>
 <form action="/rest/Registration" method="POST" id="reg-form">
-    <input type="text" name="login" placeholder="Login"><br>
-    <input type="password" name="passwordOne" placeholder="Password"><br>
-    <input type="password" name="passwordTwo" placeholder="Password"><br>
-    <input type="email" name="email" placeholder="E-mail"><br>
-    <input type="submit" value="Registration">
+    <input ng-keyup="confirmLogin(currentLogin)" ng-model="currentLogin" type="text" name="login" placeholder="Login">
+    <span style="{{'color:'+confirmPassStatusColor}}; padding-left: 10px;">{{confirmPassStatus}}</span><br>
+    <input ng-keyup="confirmPassword(passwordOne, passwordTwo)" ng-model="passwordOne" type="password" name="passwordTwo" placeholder="Password"><br>
+    <input ng-keyup="confirmPassword(passwordOne, passwordTwo)" ng-model="passwordTwo" type="password" name="passwordOne" placeholder="Password">
+    <span style="{{'color:'+confirmPasswordStatusColor}}; padding-left: 10px;">{{confirmPasswordStatus}}</span><br>
+    <input ng-keyup="confirmEmail(currentEmail)" ng-model="currentEmail" type="email" name="email" placeholder="E-mail">
+    <span style="{{'color:'+confirmEmailStatusColor}}; padding-left: 10px;">{{confirmEmailStatus}}</span><br>
+    <input type="submit" value="Registration" class="button">
 </form>
 
 
