--- a/web/css/all.css
+++ b/web/css/all.css
@@ -2,6 +2,7 @@ html, body {
 	font-family: "Myriad Pro Cond", sans-serif;
 	background: url(../img/bg.jpg) fixed no-repeat center top #111;
 	min-height: 100%;
+    line-height: 1.2;
 }
 
 input[type=text], input[type=email], input[type=password] {
@@ -12,12 +13,25 @@ input[type=text], input[type=email], input[type=password] {
     font-family: "Myriad Pro", sans-serif;
 }
 
+select {
+    padding: 5px;
+    color: #555;
+    font-family: "Myriad Pro", sans-serif;
+    font-size: 17px;
+}
+
 .clearfix:after {
 	visibility: hidden;
 	height: 0;
 	display: block;
 	clear: both;
 	content: "";
+}
+
+textarea {
+    resize: none;
+    width: 100%;
+    font-family: "Myriad Pro", sans-serif;
 }
 
 a {
@@ -338,4 +352,16 @@ footer {
 .comments .comment .login img {
     height: 20px;
     width: 20px;
+}
+
+
+
+
+#audio-upload.dropzone {
+    padding: 10px;
+    font-size: 30px;
+    background: #eee;
+    border: 5px dashed #ccc;
+    color: #222;
+    cursor: pointer;
 }
